# ShabbyComponents

./: README.md
ShabbyAlgorithmLibrary/: Compressing.h  ShabbyAlgorithmLibrary.vcxproj  ShabbyAlgorithmLibrary.vcxproj.filters  Sorting.h  compressing_test.cpp
ShabbyAlgorithmLibrary/Cpps/: Encryption.cpp
ShabbyAlgorithmLibrary/Headers/: Encryption.h
ShabbyDataBase/: CMakeLists.txt  ShabbyDataBase.vcxproj  ShabbyDataBase.vcxproj.filters
ShabbyDataBase/Cpps/: DataBase.cpp  test_database.cpp
ShabbyDataBase/Headers/: DataBase.h
ShabbyDataStructure/: BinaryTree.h  ShabbyDataStructure.vcxproj  ShabbyDataStructure.vcxproj.filters  TopoNode.h
ShabbyEventsQueue/: CMakeLists.txt  EventsQueue.h  ShabbyEventsQueue.vcxproj  ShabbyEventsQueue.vcxproj.filters  mq_test.cpp
ShabbyEventsQueue/Cpps/: EventQueue.cpp  mq_test.cpp
ShabbyEventsQueue/Headers/: EventsQueue.h
ShabbyFileManager/: CMakeLists.txt  FileManager.h  ShabbyFileManager.vcxproj  ShabbyFileManager.vcxproj.filters
ShabbyFileManager/Cpps/: FileManager.cpp  JSONParser.cpp  TinyXMLImpl.cpp  XMLParser.cpp  dLL.cpp  test_file_system.cpp
ShabbyFileManager/Headers/: FileManager.h  IXMLStructure.h  JSONParser.h  TinyXMLImpl.h  XMLParser.h  dLL.h
ShabbyFileManager/Resources/: segment_automata.xml
ShabbyLoggerLinks/: ShabbyLogger.h  ShabbyLoggerLinks.vcxproj  ShabbyLoggerLinks.vcxproj.filters  logger_test.cpp
ShabbyPlayGround/: ShabbyPlayGround.vcxproj  Test.cpp
ShabbyRedis/: CMakeLists.txt  ShabbyRedis.vcxproj  ShabbyRedis.vcxproj.filters
ShabbyRedis/Cpps/: RedisClient.cpp  test_redis_connect.cpp
ShabbyRedis/Headers/: RedisClient.h
ShabbyRedis/Libs/: hiredis.lib
ShabbyThreadPool/: .gitignore  CMakeLists.txt  QuestType.h  ShabbyComponents.sln  ShabbyThreadPool.h  ShabbyThreadPool.vcxproj  ShabbyThreadPool.vcxproj.filters  construct_project.bat  test.cpp  thread_pool_test.cpp
ShabbyThreadPool/Cpps/: ShabbyThreadPool.cpp  ThreadPool.cpp  thread_pool_test.cpp
ShabbyUniversalType/: QuestType.h  ShabbyUniversalType.vcxproj  ShabbyUniversalType.vcxproj.filters  quest_type_test.cpp
(+23 files in other folders)
